--- a/moss.html
+++ b/moss.html
@@ -25,7 +25,7 @@
 <p style="margin-top:200px;"><img src="7648.png"width="50%"></p>
 
 <p style="margin-top:100px;">HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
-<p>
+<p style="margin-top:100px;">
   <div id="disqus_thread"></div>
   <script>
 
